# prompt-shield

./: LICENSE  README.md  arch.drawio  compose-application-dev.yml  compose-guard-dev.yml  compose.yml
.devcontainer/application/: devcontainer.json
.devcontainer/guard/: devcontainer.json
Application/: .dockerignore  .env  Dockerfile  main.py  pyproject.toml
Application/data/: employee.py
Guard/: .dockerignore  .env  Dockerfile  Dockerfile.Container  entrypoint.sh  main.py  makefile  pyproject.toml  settings.py  uvicorn_config.py
